[gd_scene load_steps=17 format=2]

[ext_resource path="res://props/natural_env/fallen_branch_env_map.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://props/natural_env/map_natural_env.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/other/white-64x64.png" type="Texture" id=4]
[ext_resource path="res://props/natural_env/outside_env_map.tscn" type="PackedScene" id=5]
[ext_resource path="res://props/hole/rabbit_hole/rabbit_hole.tscn" type="PackedScene" id=6]
[ext_resource path="res://tilesets/grass_tile.tres" type="TileSet" id=7]
[ext_resource path="res://props/natural_env/herb_tree_env_map.tscn" type="PackedScene" id=8]
[ext_resource path="res://maps/main_map/main_map.gd" type="Script" id=9]
[ext_resource path="res://props/animals/moose_spawn.gd" type="Script" id=10]
[ext_resource path="res://props/village/village.tscn" type="PackedScene" id=12]
[ext_resource path="res://props/natural_env/bush_branch_env_map.tscn" type="PackedScene" id=13]
[ext_resource path="res://props/pet/pet_dog.tscn" type="PackedScene" id=16]
[ext_resource path="res://props/berries_bush/cranberries_bush.tscn" type="PackedScene" id=34]
[ext_resource path="res://props/berries_bush/juniper_berries_bush.tscn" type="PackedScene" id=35]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( -16991.7, -16628.9, 16648.6, -16857.2, 16496.4, 16630.8, -16611.2, 16630.8 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( -16991.7, -16628.9, 16648.6, -16857.2, 16496.4, 16630.8, -16611.2, 16630.8 ) ]

[node name="main_map" type="Node"]
script = ExtResource( 9 )

[node name="ground" type="Sprite" parent="."]
self_modulate = Color( 0.666667, 0.666667, 0.666667, 1 )
scale = Vector2( 380, 380 )
z_index = -30
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="grass_tilemap" type="TileMap" parent="."]
tile_set = ExtResource( 7 )
format = 1
tile_data = PoolIntArray( -5701685, 0, 0, -5570611, 0, 0, -5505082, 0, 0, -5243001, 0, 0, -5046354, 0, 0, -5046339, 0, 0, -5046322, 0, 0, -4849762, 0, 0, -4653140, 0, 0, -4521988, 0, 0, -4456555, 0, 0, -4456537, 0, 0, -4456532, 0, 0, -4456525, 0, 0, -4390991, 0, 0, -4259948, 0, 0, -4325370, 0, 0, -4194309, 0, 0, -4063371, 0, 0, -4063348, 0, 0, -3997845, 0, 0, -3997767, 0, 0, -3997755, 0, 0, -3997698, 0, 0, -3866696, 0, 0, -3932128, 0, 0, -3735600, 0, 0, -3735588, 0, 0, -3670082, 0, 0, -3670077, 0, 0, -3604560, 0, 0, -3669976, 0, 0, -3538945, 0, 0, -3473492, 0, 0, -3473457, 0, 0, -3538937, 0, 0, -3473398, 0, 0, -3211374, 0, 0, -3276799, 0, 0, -3145779, 0, 0, -3145778, 0, 0, -3145777, 0, 0, -3211255, 0, 0, -3080333, 0, 0, -3145728, 0, 0, -3145712, 0, 0, -3080148, 0, 0, -2949164, 0, 0, -2949134, 0, 0, -2949131, 0, 0, -3014626, 0, 0, -2883735, 0, 0, -2949082, 0, 0, -2883542, 0, 0, -2752526, 0, 0, -2818034, 0, 0, -2818016, 0, 0, -2687106, 0, 0, -2556042, 0, 0, -2556033, 0, 0, -2490511, 0, 0, -2490398, 0, 0, -2490376, 0, 0, -2490373, 0, 0, -2555901, 0, 0, -2555879, 0, 0, -2555851, 0, 0, -2555831, 0, 0, -2424968, 0, 0, -2424865, 0, 0, -2424853, 0, 0, -2359338, 0, 0, -2359306, 0, 0, -2293857, 0, 0, -2228237, 0, 0, -2162814, 0, 0, -2162770, 0, 0, -2162742, 0, 0, -2162736, 0, 0, -2097262, 0, 0, -2097256, 0, 0, -2097194, 0, 0, -2097171, 0, 0, -2162621, 0, 0, -2031703, 0, 0, -2031640, 0, 0, -1966210, 0, 0, -1900589, 0, 0, -1900556, 0, 0, -1835070, 0, 0, -1769538, 0, 0, -1704030, 0, 0, -1638470, 0, 0, -1638457, 0, 0, -1638440, 0, 0, -1638407, 0, 0, -1572928, 0, 0, -1507422, 0, 0, -1507421, 0, 0, -1507382, 0, 0, -1507374, 0, 0, -1441797, 0, 0, -1376402, 0, 0, -1376390, 0, 0, -1376382, 0, 0, -1441791, 0, 0, -1441762, 0, 0, -1310859, 0, 0, -1310764, 0, 0, -1310756, 0, 0, -1245269, 0, 0, -1310684, 0, 0, -1179775, 0, 0, -1179737, 0, 0, -1179707, 0, 0, -1179698, 0, 0, -1179678, 0, 0, -1179605, 0, 0, -1048662, 0, 0, -1048643, 0, 0, -1048632, 0, 0, -1048627, 0, 0, -983088, 0, 0, -1048529, 0, 0, -1048516, 0, 0, -917619, 0, 0, -917568, 0, 0, -917565, 0, 0, -917537, 0, 0, -917514, 0, 0, -852036, 0, 0, -852032, 0, 0, -852010, 0, 0, -852004, 0, 0, -851983, 0, 0, -786516, 0, 0, -786502, 0, 0, -786469, 0, 0, -786465, 0, 0, -786464, 0, 0, -786461, 0, 0, -721029, 0, 0, -720911, 0, 0, -720898, 0, 0, -655452, 0, 0, -655426, 0, 0, -655372, 0, 0, -720859, 0, 0, -720842, 0, 0, -589963, 0, 0, -589942, 0, 0, -589832, 0, 0, -589827, 0, 0, -524387, 0, 0, -524351, 0, 0, -524337, 0, 0, -589801, 0, 0, -458828, 0, 0, -458798, 0, 0, -458795, 0, 0, -458786, 0, 0, -393225, 0, 0, -458716, 0, 0, -458661, 0, 0, -327769, 0, 0, -327738, 0, 0, -327735, 0, 0, -327727, 0, 0, -327690, 0, 0, -393207, 0, 0, -393202, 0, 0, -262241, 0, 0, -262228, 0, 0, -327660, 0, 0, -327619, 0, 0, -327570, 0, 0, -327564, 0, 0, -196735, 0, 0, -196703, 0, 0, -196615, 0, 0, -262094, 0, 0, -262042, 0, 0, -131176, 0, 0, -131082, 0, 0, -196598, 0, 0, -196595, 0, 0, -196588, 0, 0, -196580, 0, 0, -196577, 0, 0, -196551, 0, 0, -196529, 0, 0, -196477, 0, 0, -65625, 0, 0, -65621, 0, 0, -65620, 0, 0, -131030, 0, 0, -130973, 0, 0, -130946, 0, 0, -84, 0, 0, -12, 0, 0, -65533, 0, 0, -65527, 0, 0, -65498, 0, 0, 65452, 0, 0, 65480, 0, 0, 65507, 0, 0, 65510, 0, 0, 11, 0, 0, 13, 0, 0, 14, 0, 0, 20, 0, 0, 27, 0, 0, 130987, 0, 0, 130991, 0, 0, 131038, 0, 0, 131060, 0, 0, 131067, 0, 0, 131069, 0, 0, 65540, 0, 0, 65544, 0, 0, 65606, 0, 0, 196522, 0, 0, 196523, 0, 0, 196550, 0, 0, 196572, 0, 0, 196591, 0, 0, 196592, 0, 0, 196595, 0, 0, 131142, 0, 0, 262057, 0, 0, 262075, 0, 0, 262105, 0, 0, 262109, 0, 0, 262112, 0, 0, 262128, 0, 0, 262137, 0, 0, 262139, 0, 0, 327616, 0, 0, 327629, 0, 0, 327644, 0, 0, 327666, 0, 0, 262145, 0, 0, 262152, 0, 0, 262153, 0, 0, 393131, 0, 0, 393173, 0, 0, 393209, 0, 0, 393215, 0, 0, 327683, 0, 0, 327687, 0, 0, 327752, 0, 0, 458688, 0, 0, 458706, 0, 0, 393220, 0, 0, 524209, 0, 0, 524217, 0, 0, 524224, 0, 0, 524234, 0, 0, 524284, 0, 0, 458779, 0, 0, 589822, 0, 0, 655312, 0, 0, 589852, 0, 0, 720849, 0, 0, 720883, 0, 0, 720918, 0, 0, 851954, 0, 0, 851956, 0, 0, 851964, 0, 0, 851967, 0, 0, 917500, 0, 0, 851984, 0, 0, 983003, 0, 0, 983010, 0, 0, 983014, 0, 0, 917515, 0, 0, 1048547, 0, 0, 1048564, 0, 0, 983060, 0, 0, 1114065, 0, 0, 1114110, 0, 0, 1048639, 0, 0, 1179629, 0, 0, 1376229, 0, 0, 1310780, 0, 0, 1376330, 0, 0, 1834975, 0, 0, 1900518, 0, 0, 1835080, 0, 0, 1900550, 0, 0, 1900623, 0, 0, 2031593, 0, 0, 1966147, 0, 0, 2031617, 0, 0, 2031696, 0, 0, 2162667, 0, 0, 2162680, 0, 0, 2097158, 0, 0, 2228216, 0, 0, 2293744, 0, 0, 2228284, 0, 0, 2424816, 0, 0, 2424819, 0, 0, 2424823, 0, 0, 2490429, 0, 0, 2752576, 0, 0, 2883579, 0, 0, 3014719, 0, 0, 3080266, 0, 0, 3342386, 0, 0, 3473455, 0, 0, 3604537, 0, 0, 3670077, 0, 0, 3997761, 0, 0, 4718587, 0, 0, 5505019, 0, 0, 5439492, 0, 0, 5570659, 0, 0, 5636190, 0, 0, 5701726, 0, 0, 5767259, 0, 0, 5767260, 0, 0, 5832798, 0, 0, 5832802, 0, 0, 5898334, 0, 0, 6029388, 0, 0, 6029394, 0, 0, 6291547, 0, 0, 6422625, 0, 0, 6619139, 0, 0, 6815741, 0, 0, 6750298, 0, 0, 6815837, 0, 0, 6946905, 0, 0, 7208944, 0, 0, 7274475, 0, 0, 7340005, 0, 0, 7602140, 0, 0, 7667654, 0, 0, 7929811, 0, 0, 8060880, 0, 0, 8126444, 0, 0, 8257484, 0, 0, 8257518, 0, 0, 8388607, 0, 0, 8519657, 0, 0, 8585148, 0, 0, 8781758, 0, 0, 8912896, 0, 0, 9043900, 0, 0, 9043960, 0, 0, 9175002, 0, 0, 9175013, 0, 0, 9175027, 0, 0, 9240524, 0, 0, 9306049, 0, 0, 9371593, 0, 0, 9502655, 0, 0 )

[node name="YSort" type="YSort" parent="."]

[node name="outside_env_map" parent="YSort" instance=ExtResource( 5 )]

[node name="bush_branch_env_map" parent="YSort" instance=ExtResource( 13 )]

[node name="herb_tree_env_map" parent="YSort" instance=ExtResource( 8 )]

[node name="map_natural_env" parent="YSort" instance=ExtResource( 3 )]

[node name="camp_zone" type="YSort" parent="YSort"]

[node name="berries_bush_env_map" type="YSort" parent="YSort"]

[node name="cranberries_bush" type="YSort" parent="YSort/berries_bush_env_map"]

[node name="cranberries_bush" parent="YSort/berries_bush_env_map/cranberries_bush" instance=ExtResource( 34 )]
position = Vector2( -1920, -1488 )

[node name="cranberries_bush2" parent="YSort/berries_bush_env_map/cranberries_bush" instance=ExtResource( 34 )]
position = Vector2( -2002, -2810 )

[node name="cranberries_bush3" parent="YSort/berries_bush_env_map/cranberries_bush" instance=ExtResource( 34 )]
position = Vector2( -5430, -2476 )

[node name="cranberries_bush4" parent="YSort/berries_bush_env_map/cranberries_bush" instance=ExtResource( 34 )]
position = Vector2( -7518, -2662 )

[node name="cranberries_bush5" parent="YSort/berries_bush_env_map/cranberries_bush" instance=ExtResource( 34 )]
position = Vector2( -4154, -4598 )

[node name="cranberries_bush6" parent="YSort/berries_bush_env_map/cranberries_bush" instance=ExtResource( 34 )]
position = Vector2( 2950, -742 )

[node name="cranberries_bush7" parent="YSort/berries_bush_env_map/cranberries_bush" instance=ExtResource( 34 )]
position = Vector2( 5406, -2998 )

[node name="cranberries_bush8" parent="YSort/berries_bush_env_map/cranberries_bush" instance=ExtResource( 34 )]
position = Vector2( 1580, -5512 )

[node name="cranberries_bush9" parent="YSort/berries_bush_env_map/cranberries_bush" instance=ExtResource( 34 )]
position = Vector2( 7050, -6216 )

[node name="cranberries_bush10" parent="YSort/berries_bush_env_map/cranberries_bush" instance=ExtResource( 34 )]
position = Vector2( 5660, -856 )

[node name="cranberries_bush11" parent="YSort/berries_bush_env_map/cranberries_bush" instance=ExtResource( 34 )]
position = Vector2( 4666, 1530 )

[node name="cranberries_bush12" parent="YSort/berries_bush_env_map/cranberries_bush" instance=ExtResource( 34 )]
position = Vector2( 3648, 3400 )

[node name="cranberries_bush13" parent="YSort/berries_bush_env_map/cranberries_bush" instance=ExtResource( 34 )]
position = Vector2( 1526, 6396 )

[node name="cranberries_bush14" parent="YSort/berries_bush_env_map/cranberries_bush" instance=ExtResource( 34 )]
position = Vector2( 5626, 4106 )

[node name="cranberries_bush15" parent="YSort/berries_bush_env_map/cranberries_bush" instance=ExtResource( 34 )]
position = Vector2( 1550, 4178 )

[node name="cranberries_bush16" parent="YSort/berries_bush_env_map/cranberries_bush" instance=ExtResource( 34 )]
position = Vector2( -1254, 2572 )

[node name="cranberries_bush17" parent="YSort/berries_bush_env_map/cranberries_bush" instance=ExtResource( 34 )]
position = Vector2( -4586, 3638 )

[node name="cranberries_bush18" parent="YSort/berries_bush_env_map/cranberries_bush" instance=ExtResource( 34 )]
position = Vector2( -3064, 5556 )

[node name="cranberries_bush19" parent="YSort/berries_bush_env_map/cranberries_bush" instance=ExtResource( 34 )]
position = Vector2( -4682, 1252 )

[node name="cranberries_bush20" parent="YSort/berries_bush_env_map/cranberries_bush" instance=ExtResource( 34 )]
position = Vector2( -6900, 976 )

[node name="juniper_berries_bush" type="YSort" parent="YSort/berries_bush_env_map"]

[node name="juniper_berries_bush" parent="YSort/berries_bush_env_map/juniper_berries_bush" instance=ExtResource( 35 )]
position = Vector2( -4816, -3372 )

[node name="juniper_berries_bush2" parent="YSort/berries_bush_env_map/juniper_berries_bush" instance=ExtResource( 35 )]
position = Vector2( -8178, -3876 )

[node name="juniper_berries_bush3" parent="YSort/berries_bush_env_map/juniper_berries_bush" instance=ExtResource( 35 )]
position = Vector2( -5358, -6102 )

[node name="juniper_berries_bush4" parent="YSort/berries_bush_env_map/juniper_berries_bush" instance=ExtResource( 35 )]
position = Vector2( -9344, -5572 )

[node name="juniper_berries_bush5" parent="YSort/berries_bush_env_map/juniper_berries_bush" instance=ExtResource( 35 )]
position = Vector2( -7352, -7826 )

[node name="juniper_berries_bush6" parent="YSort/berries_bush_env_map/juniper_berries_bush" instance=ExtResource( 35 )]
position = Vector2( 518, -4444 )

[node name="juniper_berries_bush7" parent="YSort/berries_bush_env_map/juniper_berries_bush" instance=ExtResource( 35 )]
position = Vector2( 4238, -3560 )

[node name="juniper_berries_bush8" parent="YSort/berries_bush_env_map/juniper_berries_bush" instance=ExtResource( 35 )]
position = Vector2( 4668, -5788 )

[node name="juniper_berries_bush9" parent="YSort/berries_bush_env_map/juniper_berries_bush" instance=ExtResource( 35 )]
position = Vector2( 7866, -1918 )

[node name="juniper_berries_bush10" parent="YSort/berries_bush_env_map/juniper_berries_bush" instance=ExtResource( 35 )]
position = Vector2( 920, -7614 )

[node name="juniper_berries_bush11" parent="YSort/berries_bush_env_map/juniper_berries_bush" instance=ExtResource( 35 )]
position = Vector2( -3550, 1814 )

[node name="juniper_berries_bush12" parent="YSort/berries_bush_env_map/juniper_berries_bush" instance=ExtResource( 35 )]
position = Vector2( -2940, 5128 )

[node name="juniper_berries_bush13" parent="YSort/berries_bush_env_map/juniper_berries_bush" instance=ExtResource( 35 )]
position = Vector2( -6538, 5478 )

[node name="juniper_berries_bush14" parent="YSort/berries_bush_env_map/juniper_berries_bush" instance=ExtResource( 35 )]
position = Vector2( -6606, 3260 )

[node name="juniper_berries_bush15" parent="YSort/berries_bush_env_map/juniper_berries_bush" instance=ExtResource( 35 )]
position = Vector2( -3710, 318 )

[node name="juniper_berries_bush16" parent="YSort/berries_bush_env_map/juniper_berries_bush" instance=ExtResource( 35 )]
position = Vector2( 3338, 2030 )

[node name="juniper_berries_bush17" parent="YSort/berries_bush_env_map/juniper_berries_bush" instance=ExtResource( 35 )]
position = Vector2( 3020, 3554 )

[node name="juniper_berries_bush18" parent="YSort/berries_bush_env_map/juniper_berries_bush" instance=ExtResource( 35 )]
position = Vector2( 3794, 6374 )

[node name="juniper_berries_bush19" parent="YSort/berries_bush_env_map/juniper_berries_bush" instance=ExtResource( 35 )]
position = Vector2( 6336, 3252 )

[node name="juniper_berries_bush20" parent="YSort/berries_bush_env_map/juniper_berries_bush" instance=ExtResource( 35 )]
position = Vector2( 8498, 7002 )

[node name="fallen_branch_env_map" parent="YSort" instance=ExtResource( 1 )]

[node name="boss" type="YSort" parent="YSort"]

[node name="animal_zone" type="YSort" parent="YSort"]

[node name="moose_spawn" type="YSort" parent="YSort/animal_zone"]

[node name="A1" type="YSort" parent="YSort/animal_zone/moose_spawn"]
script = ExtResource( 10 )

[node name="moose" type="YSort" parent="YSort/animal_zone/moose_spawn/A1"]

[node name="mooseeff_1" type="Node2D" parent="YSort/animal_zone/moose_spawn/A1/moose"]

[node name="moose_reload" type="Timer" parent="YSort/animal_zone/moose_spawn/A1"]
one_shot = true

[node name="A2" type="YSort" parent="YSort/animal_zone/moose_spawn"]
script = ExtResource( 10 )

[node name="moose" type="YSort" parent="YSort/animal_zone/moose_spawn/A2"]

[node name="mooseeff_1" type="Node2D" parent="YSort/animal_zone/moose_spawn/A2/moose"]

[node name="moose_reload" type="Timer" parent="YSort/animal_zone/moose_spawn/A2"]
one_shot = true

[node name="A3" type="YSort" parent="YSort/animal_zone/moose_spawn"]
script = ExtResource( 10 )

[node name="moose" type="YSort" parent="YSort/animal_zone/moose_spawn/A3"]

[node name="mooseeff_1" type="Node2D" parent="YSort/animal_zone/moose_spawn/A3/moose"]

[node name="moose_reload" type="Timer" parent="YSort/animal_zone/moose_spawn/A3"]
one_shot = true

[node name="A4" type="YSort" parent="YSort/animal_zone/moose_spawn"]
script = ExtResource( 10 )

[node name="moose" type="YSort" parent="YSort/animal_zone/moose_spawn/A4"]

[node name="mooseeff_1" type="Node2D" parent="YSort/animal_zone/moose_spawn/A4/moose"]

[node name="moose_reload" type="Timer" parent="YSort/animal_zone/moose_spawn/A4"]
one_shot = true

[node name="B1" type="YSort" parent="YSort/animal_zone/moose_spawn"]
script = ExtResource( 10 )

[node name="moose" type="YSort" parent="YSort/animal_zone/moose_spawn/B1"]

[node name="mooseeff_1" type="Node2D" parent="YSort/animal_zone/moose_spawn/B1/moose"]

[node name="moose_reload" type="Timer" parent="YSort/animal_zone/moose_spawn/B1"]
one_shot = true

[node name="B2" type="YSort" parent="YSort/animal_zone/moose_spawn"]
script = ExtResource( 10 )

[node name="moose" type="YSort" parent="YSort/animal_zone/moose_spawn/B2"]

[node name="mooseeff_1" type="Node2D" parent="YSort/animal_zone/moose_spawn/B2/moose"]

[node name="moose_reload" type="Timer" parent="YSort/animal_zone/moose_spawn/B2"]
one_shot = true

[node name="B3" type="YSort" parent="YSort/animal_zone/moose_spawn"]
script = ExtResource( 10 )

[node name="moose" type="YSort" parent="YSort/animal_zone/moose_spawn/B3"]

[node name="mooseeff_1" type="Node2D" parent="YSort/animal_zone/moose_spawn/B3/moose"]

[node name="moose_reload" type="Timer" parent="YSort/animal_zone/moose_spawn/B3"]
one_shot = true

[node name="B4" type="YSort" parent="YSort/animal_zone/moose_spawn"]
script = ExtResource( 10 )

[node name="moose" type="YSort" parent="YSort/animal_zone/moose_spawn/B4"]

[node name="mooseeff_1" type="Node2D" parent="YSort/animal_zone/moose_spawn/B4/moose"]

[node name="moose_reload" type="Timer" parent="YSort/animal_zone/moose_spawn/B4"]
one_shot = true

[node name="C1" type="YSort" parent="YSort/animal_zone/moose_spawn"]
script = ExtResource( 10 )

[node name="moose" type="YSort" parent="YSort/animal_zone/moose_spawn/C1"]

[node name="mooseeff_1" type="Node2D" parent="YSort/animal_zone/moose_spawn/C1/moose"]

[node name="moose_reload" type="Timer" parent="YSort/animal_zone/moose_spawn/C1"]
one_shot = true

[node name="C2" type="YSort" parent="YSort/animal_zone/moose_spawn"]
script = ExtResource( 10 )

[node name="moose" type="YSort" parent="YSort/animal_zone/moose_spawn/C2"]

[node name="mooseeff_1" type="Node2D" parent="YSort/animal_zone/moose_spawn/C2/moose"]

[node name="moose_reload" type="Timer" parent="YSort/animal_zone/moose_spawn/C2"]
one_shot = true

[node name="C3" type="YSort" parent="YSort/animal_zone/moose_spawn"]
script = ExtResource( 10 )

[node name="moose" type="YSort" parent="YSort/animal_zone/moose_spawn/C3"]

[node name="mooseeff_1" type="Node2D" parent="YSort/animal_zone/moose_spawn/C3/moose"]

[node name="moose_reload" type="Timer" parent="YSort/animal_zone/moose_spawn/C3"]
one_shot = true

[node name="C4" type="YSort" parent="YSort/animal_zone/moose_spawn"]
script = ExtResource( 10 )

[node name="moose" type="YSort" parent="YSort/animal_zone/moose_spawn/C4"]

[node name="mooseeff_1" type="Node2D" parent="YSort/animal_zone/moose_spawn/C4/moose"]

[node name="moose_reload" type="Timer" parent="YSort/animal_zone/moose_spawn/C4"]
one_shot = true

[node name="D1" type="YSort" parent="YSort/animal_zone/moose_spawn"]
script = ExtResource( 10 )

[node name="moose" type="YSort" parent="YSort/animal_zone/moose_spawn/D1"]

[node name="mooseeff_1" type="Node2D" parent="YSort/animal_zone/moose_spawn/D1/moose"]

[node name="moose_reload" type="Timer" parent="YSort/animal_zone/moose_spawn/D1"]
one_shot = true

[node name="D2" type="YSort" parent="YSort/animal_zone/moose_spawn"]
script = ExtResource( 10 )

[node name="moose" type="YSort" parent="YSort/animal_zone/moose_spawn/D2"]

[node name="mooseeff_1" type="Node2D" parent="YSort/animal_zone/moose_spawn/D2/moose"]

[node name="moose_reload" type="Timer" parent="YSort/animal_zone/moose_spawn/D2"]
one_shot = true

[node name="D3" type="YSort" parent="YSort/animal_zone/moose_spawn"]
script = ExtResource( 10 )

[node name="moose" type="YSort" parent="YSort/animal_zone/moose_spawn/D3"]

[node name="mooseeff_1" type="Node2D" parent="YSort/animal_zone/moose_spawn/D3/moose"]

[node name="moose_reload" type="Timer" parent="YSort/animal_zone/moose_spawn/D3"]
one_shot = true

[node name="D4" type="YSort" parent="YSort/animal_zone/moose_spawn"]
script = ExtResource( 10 )

[node name="moose" type="YSort" parent="YSort/animal_zone/moose_spawn/D4"]

[node name="mooseeff_1" type="Node2D" parent="YSort/animal_zone/moose_spawn/D4/moose"]

[node name="moose_reload" type="Timer" parent="YSort/animal_zone/moose_spawn/D4"]
one_shot = true

[node name="A" type="YSort" parent="YSort/animal_zone"]

[node name="A1" type="YSort" parent="YSort/animal_zone/A"]

[node name="wolf" type="YSort" parent="YSort/animal_zone/A/A1"]

[node name="A2" type="YSort" parent="YSort/animal_zone/A"]

[node name="wolf" type="YSort" parent="YSort/animal_zone/A/A2"]

[node name="A3" type="YSort" parent="YSort/animal_zone/A"]

[node name="wolf" type="YSort" parent="YSort/animal_zone/A/A3"]

[node name="A4" type="YSort" parent="YSort/animal_zone/A"]

[node name="wolf" type="YSort" parent="YSort/animal_zone/A/A4"]

[node name="B" type="YSort" parent="YSort/animal_zone"]

[node name="B1" type="YSort" parent="YSort/animal_zone/B"]

[node name="wolf" type="YSort" parent="YSort/animal_zone/B/B1"]

[node name="B2" type="YSort" parent="YSort/animal_zone/B"]

[node name="wolf" type="YSort" parent="YSort/animal_zone/B/B2"]

[node name="B3" type="YSort" parent="YSort/animal_zone/B"]

[node name="wolf" type="YSort" parent="YSort/animal_zone/B/B3"]

[node name="B4" type="YSort" parent="YSort/animal_zone/B"]

[node name="wolf" type="YSort" parent="YSort/animal_zone/B/B4"]

[node name="C" type="YSort" parent="YSort/animal_zone"]

[node name="C1" type="YSort" parent="YSort/animal_zone/C"]

[node name="wolf" type="YSort" parent="YSort/animal_zone/C/C1"]

[node name="C2" type="YSort" parent="YSort/animal_zone/C"]

[node name="wolf" type="YSort" parent="YSort/animal_zone/C/C2"]

[node name="C3" type="YSort" parent="YSort/animal_zone/C"]

[node name="wolf" type="YSort" parent="YSort/animal_zone/C/C3"]

[node name="C4" type="YSort" parent="YSort/animal_zone/C"]

[node name="wolf" type="YSort" parent="YSort/animal_zone/C/C4"]

[node name="D" type="YSort" parent="YSort/animal_zone"]

[node name="D1" type="YSort" parent="YSort/animal_zone/D"]

[node name="wolf" type="YSort" parent="YSort/animal_zone/D/D1"]

[node name="D2" type="YSort" parent="YSort/animal_zone/D"]

[node name="wolf" type="YSort" parent="YSort/animal_zone/D/D2"]

[node name="D3" type="YSort" parent="YSort/animal_zone/D"]

[node name="wolf" type="YSort" parent="YSort/animal_zone/D/D3"]

[node name="D4" type="YSort" parent="YSort/animal_zone/D"]

[node name="wolf" type="YSort" parent="YSort/animal_zone/D/D4"]

[node name="player" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 224, -192 )

[node name="pet_dog" parent="YSort" instance=ExtResource( 16 )]
position = Vector2( 368, -16 )

[node name="Navigation2D" type="Navigation2D" parent="YSort"]
visible = false

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="YSort/Navigation2D"]
navpoly = SubResource( 1 )

[node name="Line2D" type="Line2D" parent="YSort"]

[node name="village" type="YSort" parent="YSort"]

[node name="village" parent="YSort/village" instance=ExtResource( 12 )]

[node name="rabbit_hole" type="YSort" parent="YSort"]

[node name="rabbit_hole_1" parent="YSort/rabbit_hole" instance=ExtResource( 6 )]
position = Vector2( 928, 2000 )

[node name="rabbit_hole_2" parent="YSort/rabbit_hole" instance=ExtResource( 6 )]
position = Vector2( 3320, 1136 )

[node name="rabbit_hole_3" parent="YSort/rabbit_hole" instance=ExtResource( 6 )]
position = Vector2( 6016, 1800 )

[node name="rabbit_hole_4" parent="YSort/rabbit_hole" instance=ExtResource( 6 )]
position = Vector2( 2752, 4808 )

[node name="rabbit_hole_5" parent="YSort/rabbit_hole" instance=ExtResource( 6 )]
position = Vector2( 6120, 5608 )

[node name="rabbit_hole_6" parent="YSort/rabbit_hole" instance=ExtResource( 6 )]
position = Vector2( -1960, 3688 )

[node name="rabbit_hole_7" parent="YSort/rabbit_hole" instance=ExtResource( 6 )]
position = Vector2( -5976, 4376 )

[node name="rabbit_hole_8" parent="YSort/rabbit_hole" instance=ExtResource( 6 )]
position = Vector2( -5208, 2296 )

[node name="rabbit_hole_9" parent="YSort/rabbit_hole" instance=ExtResource( 6 )]
position = Vector2( -3984, 6120 )

[node name="rabbit_hole_10" parent="YSort/rabbit_hole" instance=ExtResource( 6 )]
position = Vector2( -1360, 6056 )

[node name="rabbit_hole_11" parent="YSort/rabbit_hole" instance=ExtResource( 6 )]
position = Vector2( -4480, -1056 )

[node name="rabbit_hole_12" parent="YSort/rabbit_hole" instance=ExtResource( 6 )]
position = Vector2( -5888, -3928 )

[node name="rabbit_hole_13" parent="YSort/rabbit_hole" instance=ExtResource( 6 )]
position = Vector2( -1432, -4736 )

[node name="rabbit_hole_14" parent="YSort/rabbit_hole" instance=ExtResource( 6 )]
position = Vector2( -3512, -7232 )

[node name="rabbit_hole_15" parent="YSort/rabbit_hole" instance=ExtResource( 6 )]
position = Vector2( -6064, -6312 )

[node name="rabbit_hole_16" parent="YSort/rabbit_hole" instance=ExtResource( 6 )]
position = Vector2( 4096, -2760 )

[node name="rabbit_hole_17" parent="YSort/rabbit_hole" instance=ExtResource( 6 )]
position = Vector2( 1672, -4360 )

[node name="rabbit_hole_18" parent="YSort/rabbit_hole" instance=ExtResource( 6 )]
position = Vector2( 3192, -6496 )

[node name="rabbit_hole_19" parent="YSort/rabbit_hole" instance=ExtResource( 6 )]
position = Vector2( 7240, -3744 )

[node name="rabbit_hole_20" parent="YSort/rabbit_hole" instance=ExtResource( 6 )]
position = Vector2( 5896, -5936 )

[node name="fence" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="fence"]
polygon = PoolVector2Array( -10000, -10000, -10000, 10000, 10000, 10000, 10000, -10000, -9998, -10000, -9998, -10006, 10006, -10006, 10006, 10006, -10006, 10006, -10006, -10006, -10000, -10006 )
